--- a/index.html
+++ b/index.html
@@ -1,19 +1,58 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Olá, eu sou a cabeça</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SassaDama CV</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Eu sou o corpo</h1>
-    <h2>Eu sou o corpo</h2>
+    <main class="resume-contents">
+      <section class="left-section">
+        <section class="left-section-content">
+          <div class="profile">
+            <img
+              class="profile-image"
+              src="img/profile-image.jpg"
+              alt="Profile image"
+            />
+            <p class="name">Sabrina Silva</p>
+            <p class="profession">Estudante de TI</p>
+          </div>
+          <div class="contact-info">
+            <p class="left-title">Contato</p>
+            <ul>
+              <li><i class="fa fa-phone"></i>+55 15 981730762</li>
+              <li><i class="fa fa-envelope"></i>sassa.dmf@gmail.com</li>
+              <li><i class="fa fa-globe"></i>www.sassadama.com</li>
+              <li><i class="fa fa-github"></i>SassaDama</li>
+            </ul>
+          </div>
+          <div class="skills">
+            <p class="left-title">Skills</p>
+            <ul>
+              <li><p>HTML, CSS, Git & GitHub</p></li>
+              <li><p>Soft Skills</p></li>
+            </ul>
+          </div>
+        </section>
+      </section>
+        <section class="right-section">
+          <div class="right-section-contents">
+            <section class="about gap">
+              <div class="right-title">Sobre Mim</div>
+              <p class="about-me-contents">
+                Olá sou Sabrina.<br />
+                <br />
+                Um pouco mais sobre o que faço. <br />
+                Quais são minhas competencias.
+              </p>
+            </section>
+          </div>
+        </section>
+      </section>
+    </main>
   </body>
-  <ol>
-    <li>Café</li>
-    <li>Chá</li>
-    <li>Leite</li>
-  </ol>
-  <ul>
-    <li>Café</li>
-    <li>Chá</li>
-    <li>Leite</li>
-  </ul>
 </html>
