added initial curriculum files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SassaDama CV</title>
+    <title>Sabrina Silva CV</title>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -24,7 +24,7 @@
           <div class="contact-info">
             <p class="left-title">Contato</p>
             <ul>
-              <li><i class="fa fa-phone"></i>+55 15 981730762</li>
+              <li><i class="fa fa-phone"></i>+55 15 98173 0762</li>
               <li><i class="fa fa-envelope"></i>sassa.dmf@gmail.com</li>
               <li><i class="fa fa-globe"></i>www.sassadama.com</li>
               <li><i class="fa fa-github"></i>SassaDama</li>
@@ -51,6 +51,43 @@
               </p>
             </section>
           </div>
+          <section class="experience gap">
+            <div class="right-title">Experiência</div>
+            <div class="experience-contents">
+              <div class="exp-left">
+                <p class="exp-company-name">Kallef</p>
+                <p class="exp-time-period">2006-2018</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Diretora Artistica</p>
+                <p class="exp-desc">
+                  Atendendo a sociedade carente, levando cultura e lazer.                  
+                  <br>                 
+                  Trabalhava criando coreografias, espetáculos e eventos culturais.
+                  <br>
+                  Oferecendo conhecimentos sobre direitos sociais, cuidados com o corpo e cuidados pscologicos.
+                 </p>
+              </div>
+              <div class="exp-left">
+                <p class="exp-company-name">Dama de Ferro Rock Bar</p>
+                <p class="exp-time-period">2012-2020</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Dona Proprietária</p>
+                <p class="exp-desc">
+                  Trabalhei por 8 (oito) anos como atendente, chapeira, caixa, técnica de som, psicóloga e até Rock Star.
+                  <br>
+                  Tinha pra mim que estava tranquila, com o meu comércio.
+                  <br>
+                  <br>
+                  Veio a pandemia...Ficou claro que minha carreira não era nada sólida.
+                  <br>
+                  Nesse período de fechamento do meu comércio devido a pandemia até os dias atuais; estou em transição de carreira, estudando, aprendendo e me apaixonando pela área da TI.
+                 </p>
+              </div>
+
+            </div>
+          </section>
         </section>
       </section>
     </main>
