add initial curriculum files

--- a/index.html
+++ b/index.html
@@ -39,55 +39,92 @@
           </div>
         </section>
       </section>
-        <section class="right-section">
-          <div class="right-section-contents">
-            <section class="about gap">
-              <div class="right-title">Sobre Mim</div>
-              <p class="about-me-contents">
-                Olá sou Sabrina.<br />
-                <br />
-                Um pouco mais sobre o que faço. <br />
-                Quais são minhas competencias.
-              </p>
-            </section>
-          </div>
-          <section class="experience gap">
-            <div class="right-title">Experiência</div>
-            <div class="experience-contents">
-              <div class="exp-left">
-                <p class="exp-company-name">Kallef</p>
-                <p class="exp-time-period">2006-2018</p>
-              </div>
-              <div class="exp-right">
-                <p class="exp-position">Diretora Artistica</p>
-                <p class="exp-desc">
-                  Atendendo a sociedade carente, levando cultura e lazer.                  
-                  <br>                 
-                  Trabalhava criando coreografias, espetáculos e eventos culturais.
-                  <br>
-                  Oferecendo conhecimentos sobre direitos sociais, cuidados com o corpo e cuidados pscologicos.
-                 </p>
-              </div>
-              <div class="exp-left">
-                <p class="exp-company-name">Dama de Ferro Rock Bar</p>
-                <p class="exp-time-period">2012-2020</p>
-              </div>
-              <div class="exp-right">
-                <p class="exp-position">Dona Proprietária</p>
-                <p class="exp-desc">
-                  Trabalhei por 8 (oito) anos como atendente, chapeira, caixa, técnica de som, psicóloga e até Rock Star.
-                  <br>
-                  Tinha pra mim que estava tranquila, com o meu comércio.
-                  <br>
-                  <br>
-                  Veio a pandemia...Ficou claro que minha carreira não era nada sólida.
-                  <br>
-                  Nesse período de fechamento do meu comércio devido a pandemia até os dias atuais; estou em transição de carreira, estudando, aprendendo e me apaixonando pela área da TI.
-                 </p>
-              </div>
-
-            </div>
+      <section class="right-section">
+        <div class="right-section-contents">
+          <section class="about gap">
+            <div class="right-title">Sobre Mim</div>
+            <p class="about-me-contents">
+              Olá sou Sabrina.<br />
+              <br />
+              Um pouco mais sobre o que faço. <br />
+              Quais são minhas competencias.
+            </p>
           </section>
+        </div>
+        <section class="experience gap">
+          <div class="right-title">Experiência</div>
+          <div class="experience-contents">
+            <div class="exp-left">
+              <p class="exp-company-name">Kallef</p>
+              <p class="exp-time-period">2006-2018</p>
+            </div>
+            <div class="exp-right">
+              <p class="exp-position">Diretora Artistica</p>
+              <p class="exp-desc">
+                Atendendo a sociedade carente, levando cultura e lazer.
+                <br />
+                Trabalhava criando coreografias, espetáculos e eventos
+                culturais.
+                <br />
+                Oferecendo conhecimentos sobre direitos sociais, cuidados com o
+                corpo e cuidados pscologicos.
+              </p>
+            </div>
+            <div class="exp-left">
+              <p class="exp-company-name">Dama de Ferro Rock Bar</p>
+              <p class="exp-time-period">2012-2020</p>
+            </div>
+            <div class="exp-right">
+              <p class="exp-position">Dona Proprietária</p>
+              <p class="exp-desc">
+                Trabalhei por 8 (oito) anos como atendente, chapeira, caixa,
+                técnica de som, psicóloga e até Rock Star.
+                <br />
+                Tinha pra mim que estava tranquila, com o meu comércio.
+                <br />
+                <br />
+                Veio a pandemia...Ficou claro que minha carreira não era nada
+                sólida.
+                <br />
+                Nesse período de fechamento do meu comércio devido a pandemia
+                até os dias atuais; estou em transição de carreira, estudando,
+                aprendendo e me apaixonando pela área da TI.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section class="education gap">
+          <div class="right-title">Formação Academica</div>
+          <div class="education-contents">
+            <div class="education-left">
+              <p class="education-school-name">Conservatorio Musical Tatui</p>
+              <p class="education-time-period">1993-2000</p>
+            </div>
+            <div class="education-rigth">
+              <p class="education-subject">Formação Artisica</p>
+              <p class="education-desc">
+                Curso de Teoria e Solfejo, Teatro e Piano
+              </p>
+            </div>
+            <div class="education-left">
+              <p class="education-school-name">ETEC Salles Gomes</p>
+              <p class="education-time-period">2006-2007</p>
+            </div>
+            <div class="education-rigth">
+              <p class="education-subject">Tecnico em Quimica</p>
+              <p class="education-desc">
+                Praticas laboratoriais, quantitativas e qualitativas.
+              </p>
+            </div>
+            <div class="education-left">
+              <p class="education-school-name">UNIVESP</p>
+              <p class="education-time-period">Em Curso</p>
+            </div>
+            <div class="education-rigth">
+              <p class="education-subject">Eixo Computação</p>
+              <p class="education-desc">Graduação Engenharia da Computação</p>
+            </div>
+          </div>
         </section>
       </section>
     </main>
