added initial curriculum files

--- a/index.html
+++ b/index.html
@@ -126,6 +126,27 @@
             </div>
           </div>
         </section>
+        <section class="awards gap">
+          <div class="rigth-title">Cursos</div>
+          <div class="awards-contents">
+            <div class="awards-left">
+              <p class="awards-company-name">EBAC</p>
+              <p class="awards-time-period">Outubro 2022</p>
+            </div>
+            <div class="awards-right">
+              <p class="awards-name">Maratona Dev</p>
+              <p class="awards-desc">Maratona feita em outubro de 2022</p>
+            </div>
+            <div class="awards-left">
+              <p class="awards-company-name">EBAC</p>
+              <p class="awards-time-period">Outubro 2022</p>
+            </div>
+            <div class="awards-right">
+              <p class="awards-name">Maratona Dev</p>
+              <p class="awards-desc">Maratona feita em outubro de 2022</p>
+            </div>
+          </div>
+        </section>
       </section>
     </main>
   </body>
