added initial curriculum files

--- a/index.html
+++ b/index.html
@@ -6,12 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sabrina Silva CV</title>
 
+    <!-- Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- font-awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="resume-contents">
       <section class="left-section">
-        <section class="left-section-content">
+        <div class="left-section-content">
           <div class="profile">
             <img
               class="profile-image"
@@ -37,116 +52,134 @@
               <li><p>Soft Skills</p></li>
             </ul>
           </div>
-        </section>
+        </div>
       </section>
+
       <section class="right-section">
         <div class="right-section-contents">
+          <!--SOBRE MIM-->
+
           <section class="about gap">
             <div class="right-title">Sobre Mim</div>
             <p class="about-me-contents">
-              Olá sou Sabrina.<br />
+              Olá sou a Sabrina.<br />
               <br />
               Um pouco mais sobre o que faço. <br />
               Quais são minhas competencias.
             </p>
           </section>
+          <!--FIM SOBRE MIM-->
+
+          <!--EXPERIENCIA-->
+
+          <section class="experience gap">
+            <div class="right-title">Experiência</div>
+            <div class="experience-contents">
+              <div class="exp-left">
+                <p class="exp-company-name">Kallef</p>
+                <p class="exp-time-period">2006-2018</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Diretora Artistica</p>
+                <p class="exp-desc">
+                  Atendendo a sociedade carente, levando cultura e lazer.
+                  <br />
+                  Trabalhava criando coreografias, espetáculos e eventos
+                  culturais.
+                  <br />
+                  Oferecendo conhecimentos sobre direitos sociais, cuidados com
+                  o corpo e cuidados pscologicos.
+                </p>
+              </div>
+            </div>
+            <div class="experience-contents">
+              <div class="exp-left">
+                <p class="exp-company-name">Dama de Ferro Rock Bar</p>
+                <p class="exp-time-period">2012-2020</p>
+              </div>
+              <div class="exp-right">
+                <p class="exp-position">Dona Proprietária</p>
+                <p class="exp-desc">
+                  Trabalhei por 8 (oito) anos como atendente, chapeira, caixa,
+                  técnica de som, psicóloga e até Rock Star.
+                  <br />
+                  Tinha pra mim que estava tranquila, com o meu comércio.
+                  <br />
+                  <br />
+                  Veio a pandemia...Ficou claro que minha carreira não era nada
+                  sólida.
+                  <br />
+                  Nesse período de fechamento do meu comércio devido a pandemia
+                  até os dias atuais; estou em transição de carreira, estudando,
+                  aprendendo e me apaixonando pela área da TI.
+                </p>
+              </div>
+            </div>
+          </section>
+          <!--FIM EXPERIENCIA-->
+
+          <!--FORMAÇAO ACADEMICA-->
+          <section class="education gap">
+            <div class="right-title">Formação Academica</div>
+            <div class="education-contents">
+              <div class="education-left">
+                <p class="education-school-name">Conservatorio Musical</p>
+                <p class="education-time-period">1993-2000</p>
+              </div>
+              <div class="education-rigth">
+                <p class="education-subject">Formação Artisica</p>
+                <p class="education-desc">
+                  Curso de Teoria e Solfejo, Teatro e Piano
+                </p>
+              </div>
+              <div class="education-left">
+                <p class="education-school-name">ETEC Salles Gomes</p>
+                <p class="education-time-period">2006-2007</p>
+              </div>
+              <div class="education-rigth">
+                <p class="education-subject">Tecnico em Quimica</p>
+                <p class="education-desc">
+                  Praticas laboratoriais, quantitativas e qualitativas.
+                </p>
+              </div>
+              <div class="education-left">
+                <p class="education-school-name">UNIVESP</p>
+                <p class="education-time-period">Em Curso</p>
+              </div>
+              <div class="education-rigth">
+                <p class="education-subject">Eixo Computação</p>
+                <p class="education-desc">Graduação Engenharia da Computação</p>
+              </div>
+            </div>
+          </section>
+          <!--FIM DE FORMAÇAO-->
+
+          <!--CURSOS-->
+          <section class="awards gap">
+            <div class="right-title">Cursos</div>
+            <div class="awards-contents">
+              <div class="awards-left">
+                <p class="awards-company-name">trybe</p>
+                <p class="awards-time-period">Janeiro de 2022</p>
+              </div>
+              <div class="awards-right">
+                <p class="awards-name">Curso Introdutorio Javascript</p>
+                <p class="awards-desc">Carga horária de 17 horas</p>
+              </div>
+            </div>
+            <div class="awards-contents">
+              <div class="awards-left">
+                <p class="awards-company-name">EBAC</p>
+                <p class="awards-time-period">Outubro 2022</p>
+              </div>
+              <div class="awards-right">
+                <p class="awards-name">Maratona Dev</p>
+                <p class="awards-desc">Maratona feita em outubro de 2022</p>
+              </div>
+            </div>
+          </section>
+          <!--FIM CURSOS-->
         </div>
-        <section class="experience gap">
-          <div class="right-title">Experiência</div>
-          <div class="experience-contents">
-            <div class="exp-left">
-              <p class="exp-company-name">Kallef</p>
-              <p class="exp-time-period">2006-2018</p>
-            </div>
-            <div class="exp-right">
-              <p class="exp-position">Diretora Artistica</p>
-              <p class="exp-desc">
-                Atendendo a sociedade carente, levando cultura e lazer.
-                <br />
-                Trabalhava criando coreografias, espetáculos e eventos
-                culturais.
-                <br />
-                Oferecendo conhecimentos sobre direitos sociais, cuidados com o
-                corpo e cuidados pscologicos.
-              </p>
-            </div>
-            <div class="exp-left">
-              <p class="exp-company-name">Dama de Ferro Rock Bar</p>
-              <p class="exp-time-period">2012-2020</p>
-            </div>
-            <div class="exp-right">
-              <p class="exp-position">Dona Proprietária</p>
-              <p class="exp-desc">
-                Trabalhei por 8 (oito) anos como atendente, chapeira, caixa,
-                técnica de som, psicóloga e até Rock Star.
-                <br />
-                Tinha pra mim que estava tranquila, com o meu comércio.
-                <br />
-                <br />
-                Veio a pandemia...Ficou claro que minha carreira não era nada
-                sólida.
-                <br />
-                Nesse período de fechamento do meu comércio devido a pandemia
-                até os dias atuais; estou em transição de carreira, estudando,
-                aprendendo e me apaixonando pela área da TI.
-              </p>
-            </div>
-          </div>
-        </section>
-        <section class="education gap">
-          <div class="right-title">Formação Academica</div>
-          <div class="education-contents">
-            <div class="education-left">
-              <p class="education-school-name">Conservatorio Musical Tatui</p>
-              <p class="education-time-period">1993-2000</p>
-            </div>
-            <div class="education-rigth">
-              <p class="education-subject">Formação Artisica</p>
-              <p class="education-desc">
-                Curso de Teoria e Solfejo, Teatro e Piano
-              </p>
-            </div>
-            <div class="education-left">
-              <p class="education-school-name">ETEC Salles Gomes</p>
-              <p class="education-time-period">2006-2007</p>
-            </div>
-            <div class="education-rigth">
-              <p class="education-subject">Tecnico em Quimica</p>
-              <p class="education-desc">
-                Praticas laboratoriais, quantitativas e qualitativas.
-              </p>
-            </div>
-            <div class="education-left">
-              <p class="education-school-name">UNIVESP</p>
-              <p class="education-time-period">Em Curso</p>
-            </div>
-            <div class="education-rigth">
-              <p class="education-subject">Eixo Computação</p>
-              <p class="education-desc">Graduação Engenharia da Computação</p>
-            </div>
-          </div>
-        </section>
-        <section class="awards gap">
-          <div class="rigth-title">Cursos</div>
-          <div class="awards-contents">
-            <div class="awards-left">
-              <p class="awards-company-name">EBAC</p>
-              <p class="awards-time-period">Outubro 2022</p>
-            </div>
-            <div class="awards-right">
-              <p class="awards-name">Maratona Dev</p>
-              <p class="awards-desc">Maratona feita em outubro de 2022</p>
-            </div>
-            <div class="awards-left">
-              <p class="awards-company-name">EBAC</p>
-              <p class="awards-time-period">Outubro 2022</p>
-            </div>
-            <div class="awards-right">
-              <p class="awards-name">Maratona Dev</p>
-              <p class="awards-desc">Maratona feita em outubro de 2022</p>
-            </div>
-          </div>
-        </section>
       </section>
     </main>
   </body>
